--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ img:hover {
     font-size: 16px;
     font-weight: bold;
 }
+/*This is the part of UI logic code*/
 h9{
 color: white;
 font-weight: bold;
@@ -214,9 +215,7 @@ p1{
 }
 .footer{
     background-color:burlywood;
-    
-    width: 150%;
-    
-    text-align: center;
+text-align: center;
     color: black;
+    width: 150%;
 }
